compiler/tests/fail/param_expansion/x86-64/bug_675.jazz
export
fn main() -> reg u64 {
    stack u64[10] a;
    a[0] = 0;
    a[0:0x100000000000000000] = a[0:0x100000000000000000];

    reg u64 r;
    r = a[0];

    return r;
}
